--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "polynomial_problem",
   "version": "1.0.0",
   "main": "polynomial.js",
+  "type": "module", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node polynomial.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {}
 }
